--- a/_posts/2017-09-15-helvete.md
+++ b/_posts/2017-09-15-helvete.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title:  "Moon Jekyll Theme"
-date:   2016-04-06
-excerpt: "Minimal, one column Jekyll theme for your blog."
+title:  "Helvete"
+date:   2017-09-15
+excerpt: "A simple application written with Inferno JS."
 project: true
 tag:
-- jekyll
-- moon
-- blog
-- about
-- theme
+- inferno
+- reactive
+- spa
+- pwa
+- quicky
 comments: true
 ---
 
