Atualização da estrutura do site

--- a/posts/2019-08-06-teste.md
+++ b/posts/2019-08-06-teste.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Criando um webapp com Dart e nada mais"
+image: "/assets/img/blank.jpg"
 date: 2018-08-06 13:00:00
 description: "Dart pode ser uma excelente alternativa também para aplicações web."
 main-class: 'dart'
@@ -10,6 +11,8 @@ tags:
 - web
 twitter_text: "Criando um webapp com Dart"
 introduction: "Uma amostra do que a linguagem Dart pode fazer, além do Flutter."
+categories:
+- Teste
 ---
 
 ## Teste
